# json-merge-patch-gen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs
